--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <h2>The Best Beverage You Will EVER Taste</h2>
       <h5>February 20th, 2023 / By Jennifer Dinh</h5>
     
-      <p>Have you ever tried matcha? Did you end up not liking it? Well, I am in the same boat as you...or so I thought. The first matcha I ever tasted was so bitter to me that I was so confused why all my other friends were so in love with matcha. It wasn't until my friend told me to try a Matcha Latte, that I fully understood why matcha was so loved. Matcha had then won my heart, and I will convert you to a matcha enthusiast soon enough!</p>
+      <p>Have you ever tried matcha? Did you end up not liking it? Well, I am in the same boat as you...or so I thought. 
+      <br>The first matcha I ever tasted was so bitter to me that I was so confused why all my other friends were so in love with matcha. It wasn't until my friend told me to try a Matcha Latte, that I fully understood why matcha was so loved. Matcha had then won my heart, and I will convert you to a matcha enthusiast soon enough!<br></p>
       <p><img src="matcha.jpeg" alt="image" class="pic"><br></p>
 
       <h3>What is Matcha Latte and What does it taste like?</h3>
